- fix bug where non-rounded cover would be returned when retrieveing cover from cache -- kaneryu on 2025-02-02
- fix bug in kimage that wouldn't initialize a variable before downlading the image -- kaneryu on 2025-02-03
- fix bug in song where playback info was never downloaded in the first place -- kaneryu on 2025-02-03



# Version 0.19

## New Features

- Add functionality to the queueview -- kaneryu on 2025-01-23

## Bugfixes

- fix title in queue, fix overlapping issue in song results -- kaneryu on 2025-01-23
- fix bug where seeking would cause the play button to show buffering indef -- kaneryu on 2025-01-24
- song duration not updating -- kaneryu on 2025-01-24



# Version 0.18

## New Features

- Add prerequisite for queuePanel -- kaneryu on 2025-01-23



# Version 0.17

## New Features

- Improve semantics around the play/pasue button, and fix a bug where it wouldn't update sometimes -- kaneryu on 2025-01-22



# Version 0.16

## New Features

- replace placeholder text on songbar to be icons -- kaneryu on 2025-01-21

## Bugfixes

- fix spacing and icon height -- kaneryu on 2025-01-22



# Version 0.15

## New Features

- Song no longer downloads playback info from internet if it's already downloaded -- kaneryu on 2025-01-11

## Bugfixes

- Fix searchModel returning KImage living in different thread -- kaneryu on 2025-01-11
- fix multiple bugs related to downloading songs -- kaneryu on 2025-01-19
- fix bug where songs could not be played if the download was corrupted -- kaneryu on 2025-01-19
- Add mutexes to increase thread safety -- kaneryu on 2025-01-21



# Version 0.14

## New Features

- Add song downloading -- kaneryu on 2025-01-06

## Bugfixes

- fix None in coverconvert caused by imageCache being set too early -- kaneryu on 2025-01-06
- try a fix for no corner radius showing in the songbar image -- kaneryu on 2025-01-06